--- a/source/renderer/app/components/wallet/WalletRestoreDialog.scss
+++ b/source/renderer/app/components/wallet/WalletRestoreDialog.scss
@@ -84,7 +84,8 @@
           }
         }
 
-        :global .WalletCreateDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
+        :global
+          .WalletCreateDialog_tooltip.SimpleTooltip_root.TooltipOverrides_root.InlineEditingDropdown-tooltip_root.SimpleTooltip_isShowingOnHover {
           height: 12px;
           left: -153px;
           top: 2px;
