DDW-296 Deadalus review fixes

--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationSteps.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationSteps.scss
@@ -6,6 +6,10 @@
       letter-spacing: 2px;
       margin-bottom: 0;
     }
+
+    .BackToTopButton_component {
+      margin-left: 0 !important;
+    }
   }
 
   .delegationStepsIndicatorWrapper {
