[DDW-296] Run prettier, fix password input vertical alignment

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -54,7 +54,9 @@
     opacity: 1;
 
     &:hover {
-      background-color: var(--theme-dialog-fullsize-field-background-color) !important;
+      background-color: var(
+        --theme-dialog-fullsize-field-background-color
+      ) !important;
     }
   }
 }
