--- a/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseStakePoolDialog.scss
+++ b/source/renderer/app/components/staking/delegation-setup-wizard/DelegationStepsChooseStakePoolDialog.scss
@@ -1,8 +1,10 @@
 .delegationStepsChooseStakePoolDialogWrapper {
   :global {
     .StakePoolThumbnail_content {
-      background-color: 1px solid var(--theme-delegation-steps-choose-stake-pool-thumb-background-color);
-      border: 1px solid var(--theme-delegation-steps-choose-stake-pool-thumb-border-color);
+      background-color: 1px solid
+        var(--theme-delegation-steps-choose-stake-pool-thumb-background-color);
+      border: 1px solid
+        var(--theme-delegation-steps-choose-stake-pool-thumb-border-color);
     }
 
     .Dialog_subtitle {
@@ -40,7 +42,7 @@
 
         &.retiring {
           background: var(
-              --theme-staking-stake-pool-retirement-background-color
+            --theme-staking-stake-pool-retirement-background-color
           ) !important;
         }
 
@@ -50,7 +52,8 @@
       }
 
       .selectPoolBlockPlaceholder {
-        border: 2px solid var(--theme-delegation-steps-choose-stake-pool-thumb-border-color);
+        border: 2px solid
+          var(--theme-delegation-steps-choose-stake-pool-thumb-border-color);
         border-style: dashed;
 
         .icon {
@@ -62,7 +65,7 @@
 
             path {
               stroke: var(
-                  --theme-delegation-steps-choose-stake-pool-checkmark-icon-color
+                --theme-delegation-steps-choose-stake-pool-checkmark-icon-color
               );
             }
           }
@@ -70,11 +73,12 @@
       }
 
       .selectedPoolBlock {
-        border: 1px solid var(--theme-delegation-steps-choose-stake-pool-thumb-border-color);
+        border: 1px solid
+          var(--theme-delegation-steps-choose-stake-pool-thumb-border-color);
 
         .ticker {
           color: var(
-              --theme-delegation-steps-choose-stake-pool-selected-ticker-color
+            --theme-delegation-steps-choose-stake-pool-selected-ticker-color
           );
           font-family: var(--font-semibold);
           font-size: 14px;
@@ -94,7 +98,7 @@
 
             path {
               stroke: var(
-                  --theme-delegation-steps-choose-stake-pool-selected-checkmark-icon-color
+                --theme-delegation-steps-choose-stake-pool-selected-checkmark-icon-color
               );
             }
           }
@@ -109,7 +113,7 @@
 
               path {
                 stroke: var(
-                    --theme-staking-stake-pool-retirement-background-color
+                  --theme-staking-stake-pool-retirement-background-color
                 );
               }
             }
@@ -119,7 +123,7 @@
 
       .selectStakePoolLabel {
         color: var(
-            --theme-delegation-steps-choose-stake-pool-delegated-pools-label-color
+          --theme-delegation-steps-choose-stake-pool-delegated-pools-label-color
         );
         flex: 1;
         font-family: var(--font-light);
