--- a/source/renderer/app/components/staking/widgets/TooltipPool.scss
+++ b/source/renderer/app/components/staking/widgets/TooltipPool.scss
@@ -17,9 +17,10 @@
   :global {
     button.SimpleButton_root {
       background-color: var(
-          --theme-staking-stake-pool-tooltip-delegate-button-background-color
+        --theme-staking-stake-pool-tooltip-delegate-button-background-color
       );
-      border: 1px solid var(--theme-staking-stake-pool-tooltip-delegate-button-border-color);
+      border: 1px solid
+        var(--theme-staking-stake-pool-tooltip-delegate-button-border-color);
       border-radius: 2px;
       color: var(--theme-staking-stake-pool-tooltip-delegate-button-text-color);
       height: 33px;
@@ -29,21 +30,21 @@
 
       &:hover {
         background-color: var(
-            --theme-staking-stake-pool-tooltip-delegate-button-hover-background-color,
-            --rp-button-bg-color-hover
+          --theme-staking-stake-pool-tooltip-delegate-button-hover-background-color,
+          --rp-button-bg-color-hover
         );
         color: var(
-            --theme-staking-stake-pool-tooltip-delegate-button-inverse-text-color
+          --theme-staking-stake-pool-tooltip-delegate-button-inverse-text-color
         );
       }
 
       &:active {
         background-color: var(
-            --theme-staking-stake-pool-tooltip-delegate-button-active-background-color
+          --theme-staking-stake-pool-tooltip-delegate-button-active-background-color
         );
         border: none;
         color: var(
-            --theme-staking-stake-pool-tooltip-delegate-button-inverse-text-color
+          --theme-staking-stake-pool-tooltip-delegate-button-inverse-text-color
         );
       }
     }
@@ -73,13 +74,13 @@
         g {
           path:nth-child(1) {
             fill: var(
-                --theme-staking-stake-pool-tooltip-experimental-icon-background-color
+              --theme-staking-stake-pool-tooltip-experimental-icon-background-color
             );
           }
 
           path:nth-child(2) {
             fill: var(
-                --theme-staking-stake-pool-tooltip-experimental-icon-lines-color
+              --theme-staking-stake-pool-tooltip-experimental-icon-lines-color
             );
           }
         }
@@ -172,7 +173,7 @@
 
     &:before {
       border-top-color: var(
-          --theme-staking-stake-pool-tooltip-background-color
+        --theme-staking-stake-pool-tooltip-background-color
       );
       border-width: 10px 10px 0 10px;
       left: -10px;
@@ -186,7 +187,7 @@
 
     &:before {
       border-right-color: var(
-          --theme-staking-stake-pool-tooltip-background-color
+        --theme-staking-stake-pool-tooltip-background-color
       );
       border-width: 10px 10px 10px 0;
       right: -11px;
@@ -212,7 +213,7 @@
 
     &:before {
       border-left-color: var(
-          --theme-staking-stake-pool-tooltip-background-color
+        --theme-staking-stake-pool-tooltip-background-color
       );
       border-width: 10px 0 10px 10px;
       left: -11px;
@@ -347,7 +348,7 @@
 
 .retirement {
   background: var(
-      --theme-staking-stake-pool-tooltip-retirement-background-color
+    --theme-staking-stake-pool-tooltip-retirement-background-color
   );
   border-radius: 3px;
   color: var(--theme-staking-stake-pool-tooltip-retirement-text-color);
@@ -426,7 +427,7 @@
 .defaultColor {
   .defaultColorContent {
     background: var(
-        --theme-staking-stake-pool-tooltip-neutral-background-color
+      --theme-staking-stake-pool-tooltip-neutral-background-color
     );
     color: var(--theme-staking-stake-pool-tooltip-neutral-text-color);
   }
@@ -441,7 +442,7 @@
 
   & > span {
     background: var(
-        --theme-staking-stake-pool-tooltip-neutral-background-color
+      --theme-staking-stake-pool-tooltip-neutral-background-color
     );
     white-space: nowrap;
   }
