[DDW-296] Fix autocomplete dropdown border radius

--- a/source/renderer/app/themes/overrides/OptionsOverrides.scss
+++ b/source/renderer/app/themes/overrides/OptionsOverrides.scss
@@ -1,6 +1,10 @@
 .options {
   margin-top: -7px;
 
+  ul {
+    border-radius: 4px;
+  }
+
   :global {
     [data-bubble-arrow] {
       display: none !important;
