DDW-296 Deadalus review fixes - tooltip positioning fix

--- a/source/renderer/app/themes/overrides/TooltipOverrides.scss
+++ b/source/renderer/app/themes/overrides/TooltipOverrides.scss
@@ -1,8 +1,16 @@
 .root {
   .bubble {
+    display: none;
     font-size: 14px;
   }
   b {
     font-weight: bold;
+  }
+
+  &.isShowingOnHover:hover {
+    .bubble {
+      display: block;
+      height: auto;
+    }
   }
 }
