--- a/source/renderer/app/components/widgets/Dialog.scss
+++ b/source/renderer/app/components/widgets/Dialog.scss
@@ -63,4 +63,18 @@
       }
     }
   }
+
+  :global {
+    .LoadingSpinner_component {
+      margin: 11px auto !important;
+
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
+  }
 }
