--- a/source/renderer/app/components/wallet/WalletCreateDialog.scss
+++ b/source/renderer/app/components/wallet/WalletCreateDialog.scss
@@ -100,3 +100,19 @@
     }
   }
 }
+
+.component {
+  :global {
+    .LoadingSpinner_component {
+      margin: 11px auto !important;
+
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
+  }
+}
