[DDW-355] Implement stake pools preloader

--- a/source/renderer/app/components/staking/stake-pools/StakePools.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePools.scss
@@ -2,13 +2,16 @@
 
 .component {
   @extend %regularText;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
   margin: 0 20px 20px;
 
   &.isLoading {
     align-items: center;
     display: flex;
     flex: 1;
-    margin: auto;
+    justify-content: center;
 
     .loadingBlockWrapper {
       p {
