[DDW-296] Daedalus review fixes (#2152)
* [DDW-262] Tooltip promoting password managers

* [DDW-262] Tooltip promoting password managers - fixes

* [DDW-262] Tooltip promoting password managers - fixes

* [DDW-262] Tooltip promoting password managers - fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* [DDW-262] Tooltip promoting password managers

* [DDW-262] Tooltip promoting password managers

* DDW-296 Deadalus review fixes - color fixes

* DDW-296 Deadalus review fixes - color fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* [DDW-262] Tooltip promoting password managers

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* [DDW-262] Tooltip promoting password managers

* [DDW-262] Tooltip promoting password managers

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Deadalus review fixes

* DDW-296 Dead

--- a/source/renderer/app/components/wallet/backup-recovery/WalletRecoveryPhraseEntryDialog.scss
+++ b/source/renderer/app/components/wallet/backup-recovery/WalletRecoveryPhraseEntryDialog.scss
@@ -22,15 +22,23 @@
       text-align: center;
     }
   }
+
+  :global {
+    .LoadingSpinner_component {
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
+  }
+
 }
 
 .isBold {
   label {
     font-family: var(--font-medium);
   }
-}
-
-.isSubmitting {
-  box-shadow: none !important;
-  @include loading-spinner('../../../assets/images/spinner-light.svg');
 }
