--- a/source/renderer/app/components/staking/delegation-center/WalletRow.scss
+++ b/source/renderer/app/components/staking/delegation-center/WalletRow.scss
@@ -28,9 +28,13 @@
   }
 
   .left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
     .title {
       @extend %accentText;
-      margin-bottom: 3px;
+      margin-bottom: 4px;
     }
 
     .description {
@@ -38,6 +42,7 @@
       align-items: center;
       display: flex;
       font-size: 14px;
+      margin-bottom: -2px;
 
       .donutRing {
         margin: 0 8px;
@@ -54,7 +59,7 @@
       align-items: center;
       display: flex;
       justify-content: flex-end;
-      margin-bottom: 7px;
+      margin-bottom: 4px;
 
       :global {
         .SimpleTooltip_root {
@@ -129,6 +134,7 @@
     .action {
       @extend %regularText;
       font-size: 14px;
+      margin-bottom: 3px;
       text-align: right;
 
       > span {
