--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -1,6 +1,6 @@
 .component {
   background: transparent;
-  padding: 20px 0 6px;
+  padding: 20px 0 0;
   width: 100%;
 }
 
@@ -31,18 +31,21 @@
 }
 
 .inputExtras {
-  background: var(--rp-input-bg-color);
-  bottom: 1px;
+  bottom: 0.5px;
   display: flex;
   height: 48px;
   line-height: 48px;
   padding-left: 20px;
   position: absolute;
-  right: 20px;
+  right: 11px;
 }
 
 .clearSearch {
   margin-top: -2px;
+
+  > div > div {
+    margin-left: -19px !important;
+  }
 
   button {
     background-color: var(
@@ -62,7 +65,7 @@
 
   svg {
     position: relative;
-    top: 1px;
+    top: 0.5px;
     width: 10px;
 
     > g > g {
