--- a/source/renderer/app/components/wallet/WalletCreateDialog.scss
+++ b/source/renderer/app/components/wallet/WalletCreateDialog.scss
@@ -1,5 +1,4 @@
 // TODO: Remove once the new wallet creation process is ready
-@import '../../themes/mixins/loading-spinner';
 @import '../../themes/mixins/place-form-field-error-below-input';
 
 .spendingPasswordWrapper {
@@ -102,7 +101,18 @@
   }
 }
 
-.isSubmitting {
-  box-shadow: none !important;
-  @include loading-spinner('../../assets/images/spinner-light.svg');
+.component {
+  :global {
+    .LoadingSpinner_component {
+      margin: 11px auto !important;
+
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
+  }
 }
