--- a/source/renderer/app/components/wallet/WalletRestoreDialog.scss
+++ b/source/renderer/app/components/wallet/WalletRestoreDialog.scss
@@ -1,4 +1,3 @@
-@import '../../themes/mixins/loading-spinner';
 @import '../../themes/mixins/error-message';
 @import '../../themes/mixins/place-form-field-error-below-input';
 
@@ -160,8 +159,15 @@
     text-align: center;
   }
 
-  .isSubmitting {
-    box-shadow: none !important;
-    @include loading-spinner('../../assets/images/spinner-light.svg');
+  :global {
+    .LoadingSpinner_component {
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
   }
 }
