--- a/source/renderer/app/components/wallet/settings/DeleteWalletConfirmationDialog.scss
+++ b/source/renderer/app/components/wallet/settings/DeleteWalletConfirmationDialog.scss
@@ -1,5 +1,3 @@
-@import '../../../themes/mixins/loading-spinner';
-
 .dialog {
   font-family: var(--font-light);
 
@@ -15,14 +13,33 @@
         }
       }
     }
+
+    .attention {
+      color: var(
+        --theme-button-attention-delete-text-color-disabled
+      ) !important;
+
+      &:not([disabled]) {
+        color: var(--theme-button-attention-delete-text-color) !important;
+      }
+    }
   }
 
   .confirmationInput {
     margin-top: 20px;
   }
 
-  .isSubmitting {
-    box-shadow: none !important;
-    @include loading-spinner('../../../assets/images/spinner-light.svg');
+  :global {
+    .LoadingSpinner_component {
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(
+              --theme-button-attention-delete-text-color-disabled
+            ) !important;
+          }
+        }
+      }
+    }
   }
 }
