--- a/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
+++ b/source/renderer/app/components/wallet/wallet-restore/ConfigurationDialog.scss
@@ -1,4 +1,3 @@
-@import '../../../themes/mixins/loading-spinner';
 @import '../../../themes/mixins/error-message';
 
 .component {
@@ -111,7 +110,16 @@
   text-align: center;
 }
 
-.isSubmitting {
-  box-shadow: none !important;
-  @include loading-spinner('../../../assets/images/spinner-light.svg');
+.dialogComponent {
+  :global {
+    .LoadingSpinner_component {
+      .LoadingSpinner_icon {
+        svg {
+          path {
+            fill: var(--theme-button-primary-text-color-disabled) !important;
+          }
+        }
+      }
+    }
+  }
 }
