--- a/source/renderer/app/components/widgets/forms/TinyCheckbox.scss
+++ b/source/renderer/app/components/widgets/forms/TinyCheckbox.scss
@@ -13,9 +13,9 @@ $width: 16px;
       &.SimpleCheckbox_checked {
         &::after {
           border-width: 0 1px 1px 0;
-          height: 8px;
-          margin-top: -2px;
-          width: 3.2px;
+          height: 7px;
+          margin-left: -0.5px;
+          width: 3px;
         }
       }
     }
