--- a/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsList.scss
@@ -4,3 +4,17 @@
   grid-template-columns: repeat(auto-fill, 80px);
   justify-content: space-between;
 }
+
+.preloadingBlockWrapper {
+  align-items: center;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  min-height: 44px;
+
+  :global {
+    .LoadingSpinner_component {
+      margin: 0;
+    }
+  }
+}
