[DDW-269] Color variable and close newsfeed after download update

--- a/source/renderer/app/components/news/UpdateItem.scss
+++ b/source/renderer/app/components/news/UpdateItem.scss
@@ -25,7 +25,7 @@
       word-break: break-all;
 
       .badge {
-        background-color: green;
+        background-color: var(--theme-news-item-badge-green-color);
         border-radius: 12.5px;
         display: inline-block;
         height: 8px;
