--- a/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsSearch.scss
@@ -37,7 +37,7 @@
   line-height: 48px;
   padding-left: 20px;
   position: absolute;
-  right: 11px;
+  right: 110px;
 }
 
 .clearSearch {
@@ -77,6 +77,63 @@
     > div > div {
       height: 30px;
       line-height: 1.3;
+    }
+  }
+}
+
+.viewButtons {
+  align-items: center;
+  bottom: 0.5px;
+  display: flex;
+  height: 48px;
+  justify-content: space-between;
+  line-height: 48px;
+  padding-left: 20px;
+  position: absolute;
+  right: 11px;
+
+  .separator {
+    color: var(--theme-about-window-icon-close-button-color);
+    opacity: 0.2;
+    padding-right: 10px;
+    position: relative;
+    top: -2px;
+  }
+
+  button {
+    color: var(--theme-about-window-icon-close-button-color);
+    border-radius: 3px;
+    height: 28px;
+    margin: 0 2px;
+    width: 28px;
+
+    &:hover {
+      background-color: var(--theme-staking-stake-pools-search-clear-button-background-color);
+    }
+
+    svg {
+      position: relative;
+      top: 1px;
+      width: 18px;
+
+      > g > g {
+        fill: var(--theme-staking-stake-pools-search-clear-button-color);
+        opacity: 0.3;
+      }
+    }
+  }
+
+  .selected {
+    svg {
+      > g > g {
+        opacity: 1;
+      }
+    }
+  }
+
+  .gridView {
+    svg {
+      width: 15px !important;
     }
   }
 }
