--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -2,8 +2,6 @@
 @import '../../../themes/mixins/loading-spinner';
 
 .component {
-  padding: 20px;
-
   .headerWrapper {
     align-items: flex-end;
     display: flex;
@@ -28,8 +26,7 @@
       width: auto;
 
       &:focus {
-        box-shadow: 0 1.5px 5px 0
-        var(--theme-staking-export-button-shadow-color) !important;
+        box-shadow: 0 1.5px 5px 0 var(--theme-staking-export-button-shadow-color) !important;
       }
 
       &.actionButtonFaded {
@@ -69,37 +66,6 @@
     text-align: center;
   }
 
-  .note {
-    align-items: flex-start;
-    color: var(--theme-staking-font-color-lighter);
-    display: flex;
-    flex-direction: column;
-    font-family: var(--font-regular);
-    font-size: 14px;
-    line-height: 1.43;
-    padding: 10px 20px;
-
-    p {
-      margin-bottom: 3px;
-    }
-
-    button {
-      font-size: 14px;
-      margin-top: 3px;
-      @include link(--theme-staking-link-color-light);
-
-      &:hover {
-        border-bottom: 1px solid var(--theme-staking-link-color);
-        color: var(--theme-staking-link-color);
-        svg {
-          g {
-            stroke: var(--theme-staking-link-color);
-          }
-        }
-      }
-    }
-  }
-
   :global {
     .LoadingSpinner_component {
       .LoadingSpinner_icon svg path {
@@ -130,23 +96,40 @@
     width: 100%;
 
     thead {
-      background-color: var(--theme-staking-table-head-background-color);
+      tr {
+        border: 0;
+      }
     }
 
     tr,
-    td,
-    th {
-      border: 1px solid var(--theme-staking-table-border-color);
+    td {
+      border-bottom: 1px solid var(--theme-staking-table-border-color);
     }
 
     th {
       color: var(--theme-staking-font-color-regular);
       cursor: pointer;
       font-family: var(--font-semibold);
-      font-size: 14px;
-      line-height: 1.14;
-      padding: 14px 20px;
+      font-size: 10px;
+      font-weight: 600;
+      line-height: 2;
+      padding: 5px 0 15px 15px;
       text-align: left;
+      text-transform: uppercase;
+      vertical-align: middle;
+
+      &:first-child,
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(7) {
+        text-align: center;
+      }
+
+      &:last-child {
+        text-align: right;
+      }
 
       &:hover {
         & > .sortIcon {
@@ -158,18 +141,22 @@
       & > .sortIcon {
         margin-left: 6px;
         visibility: hidden;
+
         & > svg {
           height: 7.5px;
           width: 7px;
+
           & > path {
             fill: var(--theme-staking-font-color-regular);
           }
         }
+
         &.ascending {
           & > svg {
             transform: rotate(180deg);
           }
         }
+
         &.sorted {
           opacity: 1;
           visibility: visible;
@@ -179,16 +166,28 @@
 
     td {
       color: var(--theme-staking-font-color-regular);
-      font-family: var(--font-light);
-      font-size: 14px;
-      line-height: 1.3;
-      padding: 14px 20px;
+      font-family: var(--font-regular);
+      font-size: 12px;
+      line-height: 1.33;
+      padding: 10px 15px;
       position: relative;
       text-align: left;
       -webkit-user-select: none;
       -ms-user-select: none;
       user-select: none;
-      width: 25%;
+
+      &:first-child,
+      &:nth-child(3),
+      &:nth-child(4),
+      &:nth-child(5),
+      &:nth-child(6),
+      &:nth-child(7) {
+        text-align: center;
+      }
+
+      &:last-child {
+        text-align: right;
+      }
 
       p {
         -webkit-box-orient: vertical;
