--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -189,6 +189,17 @@
         text-align: right;
       }
 
+      .ticker {
+        color: var(--theme-staking-stake-pool-tooltip-link-color);
+      }
+
+      &:nth-child(2) {
+        max-width: 150px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+      }
+
       p {
         -webkit-box-orient: vertical;
         display: -webkit-box;
