DDW-373 syncing animation on wallet dropdown

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -75,4 +75,10 @@
       ) !important;
     }
   }
+
+  .SimpleOptions_option.SimpleOptions_selectedOption .WalletsDropdownOption_component .WalletsDropdownOption_topRow .WalletsDropdownOption_topRowSync {
+    position: absolute !important;
+    right: 50px !important;
+    top: 25px !important;
+  }
 }
