--- a/source/renderer/app/components/wallet/transfer-funds/TransferFundsStep2Dialog.scss
+++ b/source/renderer/app/components/wallet/transfer-funds/TransferFundsStep2Dialog.scss
@@ -57,6 +57,28 @@
     opacity: 0.5;
   }
 
+  .questionMarkIcon {
+    svg {
+      margin-left: 6px;
+      opacity: 0.4;
+      width: 14px;
+    }
+  }
+
+  .tooltip {
+    :global {
+      .SimpleTooltip_bubble {
+        left: 6px;
+        top: -9px;
+        .SimpleBubble_bubble {
+          margin-left: -71px;
+          white-space: normal;
+          width: 164px;
+        }
+      }
+    }
+  }
+
   .error {
     @include error-message;
     margin-top: 27px;
