DDW-16 Table comparison view for stake pools - fixes

--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -278,7 +278,7 @@
         }
       }
 
-      &.retiring > span {
+      .retiring {
         background-color: var(--theme-button-attention-background-color);
         border-radius: 3px;
         color: var(--theme-staking-content-background-color);
