DDW-373 syncing animation on wallet dropdown - fixes

--- a/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
+++ b/source/renderer/app/components/staking/redeem-itn-rewards/Step1ConfigurationDialog.scss
@@ -76,6 +76,10 @@
     }
   }
 
+  .DialogFullSizeOverride_overlay .SimpleOptions_option {
+    padding: 7px 20px;
+  }
+
   .SimpleOptions_option.SimpleOptions_selectedOption .WalletsDropdownOption_component .WalletsDropdownOption_topRow .WalletsDropdownOption_topRowSync {
     position: absolute !important;
     right: 50px !important;
