--- a/source/renderer/app/components/widgets/forms/WalletsDropdownOption.scss
+++ b/source/renderer/app/components/widgets/forms/WalletsDropdownOption.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   font-family: var(--font-regular);
-  justify-content: flex-start;
+  justify-content: center;
   max-width: calc(100% - 20px);
 
   :global {
@@ -21,13 +21,16 @@
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  .labelSync {
+    opacity: 0.5;
+  }
 }
 
 .topRow {
   align-items: center;
   display: flex;
   flex-direction: row;
-  height: 30px;
   justify-content: space-between;
   max-width: 100%;
   overflow: hidden;
@@ -44,11 +47,6 @@
 
   .topRowTicker {
     display: flex;
-  }
-
-  .topRowSync {
-    position: relative;
-    top: 3px;
   }
 
   .syncing {
