--- a/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
+++ b/source/renderer/app/components/staking/stake-pools/StakePoolsTable.scss
@@ -131,6 +131,7 @@
       font-size: 10px;
       font-weight: 600;
       line-height: 2;
+      min-width: 130px;
       padding: 5px 0 15px 15px;
       text-align: left;
       text-transform: uppercase;
@@ -191,6 +192,7 @@
       font-family: var(--font-regular);
       font-size: 12px;
       line-height: 1.33;
+      min-width: 130px;
       padding: 10px 15px;
       position: relative;
       text-align: left;
@@ -324,4 +326,8 @@
       margin: 0;
     }
   }
+}
+
+:global .BorderedBox_component {
+  overflow-x: auto;
 }
