--- a/source/renderer/app/components/staking/epochs/StakingEpochs.scss
+++ b/source/renderer/app/components/staking/epochs/StakingEpochs.scss
@@ -147,7 +147,7 @@
         }
         &.ascending {
           & > svg {
-            transform: rotate(180deg);
+            transform: rotateX(150deg);
           }
         }
         &.sorted {
