--- a/source/renderer/app/components/staking/rewards/StakingRewards.scss
+++ b/source/renderer/app/components/staking/rewards/StakingRewards.scss
@@ -112,7 +112,7 @@
         }
         &.ascending {
           & > svg {
-            transform: rotate(180deg);
+            transform: rotateX(150deg);
           }
         }
         &.sorted {
