DDW-373 Syncing animation on wallet dropdown - fixes

--- a/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
+++ b/source/renderer/app/components/widgets/DialogFullSizeOverride.scss
@@ -26,6 +26,10 @@
       background-color: transparent !important;
     }
 
+    .SimpleOptions_option {
+      padding: 19px 20px;
+    }
+
     .SimpleOptions_option,
     .SimpleOptions_option:after {
       background-color: var(
