[DDW-337] Styling adjustments

--- a/source/renderer/app/components/wallet/transfer-funds/TransferFundsStep2Dialog.scss
+++ b/source/renderer/app/components/wallet/transfer-funds/TransferFundsStep2Dialog.scss
@@ -73,7 +73,7 @@
     border-radius: 3px;
     color: #5e6066;
     color: var(--theme-recovery-phrase-paper-wallet-text-color);
-    font-family: var(--font-regular);
+    font-family: var(--font-bold);
     font-size: 8px;
     font-weight: bold;
     height: 16px;
